# cpp-web

./: CMakeLists.txt  README.md
client/: .prettierignore  package-lock.json  package.json  svelte.config.js
client/src/: app.html
client/src/routes/: +page.svelte  Job.svelte  config.js
public/: index.html  test.css
server/: CMakeLists.txt
server/src/: main.cpp
server/src/jobs/: _define.h  _run.hpp  create.hpp  get.hpp  list.hpp  run.hpp
server/src/utils/: logger.hpp
src/: main.cpp
